fix: исправить модификаторы доступа полей классов, добавить указание на класс через this, удалить неиспользуемые методы, использовать LinkedList вместо ArrayList для удаления первого элемента из списка